kustomize/base/paymentservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: core
  labels:
    app: paymentservice
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
